[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Xolonium-pn4D.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PauseHUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="PauseHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -84.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Control/HBoxContainer"]
margin_right = 282.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SurrenderButton" type="Button" parent="Control/HBoxContainer"]
margin_left = 322.0
margin_right = 596.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Give Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Control/HBoxContainer"]
margin_left = 636.0
margin_right = 800.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/HBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/SurrenderButton" to="." method="_on_SurrenderButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
